# boom

./: PageName.md  ProjectHome.md
branches/GPU/: README  pyboom_example.py
src/: SConscript  distributions.hpp  numopt.hpp
src/Bmath/: Bmath.hpp  dgamma.cpp  dpq.hpp  gamma_cody.cpp  lbeta.cpp  mathlib_error.cpp  mlutils.cpp  nmath.hpp  pnchisq.cpp  pnt.cpp  qbeta.cpp  qnbinom.cpp  qnorm.cpp  rbinom.cpp  rmultinom.cpp
src/GPU/: CPU_MDI_worker_MS.cpp  CPU_MDI_worker_MS.hpp  GPU_MDI_worker.cpp  GPU_MDI_worker.hpp  GPU_MDI_worker_kernel.cu  GPU_MDI_worker_kernel.h  WeightedSYRK.cu  dci.h  gpu_example.cpp  old_test.cpp
src/LinAlg/: Array3.cpp  Array4.hpp  BlockDiagonalMatrix.hpp  Cholesky.cpp  Cholesky.hpp  CorrelationMatrix.cpp  DiagonalMatrix.cpp  DiagonalMatrix.hpp  Kronecker.cpp  Kronecker.hpp  LU.cpp  LinAlgExceptions.hpp  SConscript  SWEEP.hpp  Selector.hpp  SpdMatrix.cpp  SubMatrix.cpp  SubMatrix.hpp  Vector.cpp  Vector.hpp  VectorView.cpp  stack_columns.cpp
src/Models/: BetaBinomialModel.cpp  BetaModel.cpp  BetaModel.hpp  BinomialModel.cpp  CategoricalData.cpp  CategoricalData.hpp  CompositeData.cpp  CompositeData.hpp  CompositeEmMixtureComponent.cpp  CompositeEmMixtureComponent.hpp  CompositeModel.cpp  CompositeModel.hpp  ConstrainedVectorParams.cpp  ConstrainedVectorParams.hpp  DataTypes.cpp  DataTypes.hpp  DirichletModel.cpp  DirichletModel.hpp  EmMixtureComponent.hpp  ExponentialModel.cpp  ExponentialModel.hpp  FiniteMixtureModel.cpp  FiniteMixtureModel.hpp  GammaModel.cpp  GammaModel.hpp  GaussianEffectsModel.hpp  GaussianModel.cpp  GaussianModelBase.cpp  GaussianModelBase.hpp  GaussianModelGivenSigma.cpp  IndependentMvnModel.cpp  IndependentMvnModel.hpp  ModelTypes.cpp  MultinomialModel.cpp  MultinomialModel.hpp  MvnBase.cpp  MvnGivenScalarSigma.hpp  MvnModel.cpp  MvnModel.hpp  ParamTypes.cpp  (+16 more)
src/Samplers/: ARMS.cpp  MH_Proposals.hpp  Sampler.cpp  ScalarSliceSampler.cpp  ScalarSliceSampler.hpp  SliceSampler.cpp  TIM.cpp  TIM.hpp
src/TargetFun/: LogPost.cpp  LoglikeSubset.cpp  LoglikeSubset.hpp  TargetFun.cpp
src/cpputil/: Date.cpp  (+22 more)
trunk/: Makefile  SConstruct
trunk/src/GPU/: CMakeLists.txt  CPU_MDI_worker_MS.cpp  GPU_MDI_worker.cpp  GPU_MDI_worker.hpp  GPU_MDI_worker_kernel.cu  GPU_MDI_worker_kernel.h  MersenneTwister_kernel.cu  MersenneTwister_kernel.h  WeightedSYRK.cu  gpu_example.cpp  old_test.cpp
wiki/: PageName.wiki
(+860 files in other folders)
